--- a/src/assets/css/_variables.scss
+++ b/src/assets/css/_variables.scss
@@ -6,7 +6,7 @@ $color-white: #FFFFFF;
 $black-color: #181818;
 
 /* gray */
-$gray-color-1: #303030;
+$gray-color-1: #d3d6da;
 $gray-color-2: #434343;
 $gray-color-3: #656565;
 $gray-color-4: #B1B1B1;
