Добавил сброс дефолтных стилей браузера, а также меню и анимацию для шапки (не адаптив)

--- a/src/assets/css/_variables.scss
+++ b/src/assets/css/_variables.scss
@@ -45,11 +45,12 @@ $blue-color-4: #EFF5FF;
 $scrollbar-width: 6rem;
 
 /* header */
-$header-height: 54rem;
+$header-height: 65rem;
 
 /* fonts */
 $main-font: PTSans;
 
 /* transitions */
 $transition-delay: 150ms;
+$transition-delay-boring: .4s;
 $transition-button-active: 0.2s;
