Директива V-CLICK-OUTSIDE + оверлей на шапке и её доработка с анимациями и прочими ништяками. - вынес отдельный файл стилей для общих анимашек для VueTransition и не только - пробую сделать сетку для игры (её первоначальный вариант с отслеживанием фокуса и ввода с клавиатуры)

--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -2,6 +2,7 @@
 @import "./variables.scss";
 @import "./fonts.scss";
 @import "./mixins.scss";
+@import "./transitions.scss";
 
 html {
   font-size: 1px;
