фикс анимации диалогового окна

--- a/src/assets/css/_transitions.scss
+++ b/src/assets/css/_transitions.scss
@@ -45,18 +45,18 @@
 
 .toggle-dialog {
   &-enter-active {
-    animation: toggle-dialog-animation $transition-delay-boring cubic-bezier(0.21, 0.77, 0.68, 1.6);
+    animation: toggle-dialog-animation $transition-delay-boring ease-in-out;
   }
 
   &-leave-active {
-    animation: toggle-dialog-animation $transition-delay-boring cubic-bezier(0.21, 0.77, 0.68, 1.6) reverse;
+    animation: toggle-dialog-animation $transition-delay-boring ease-in-out reverse;
   }
 }
 
 @keyframes toggle-dialog-animation {
   from {
     opacity: 0;
-    transform: translateY(100rem);
+    transform: translateY(30rem);
     filter: blur(2rem);
   }
   to {
