--- a/src/assets/css/_fonts.scss
+++ b/src/assets/css/_fonts.scss
@@ -1,24 +1,36 @@
 @font-face {
   font-family: PTSans;
-  src: url("/src/assets/fonts/PTSans-Regular.ttf") format("truetype");
+  src: url("/src/assets/fonts/Oswald-Regular.ttf") format("truetype");
   font-weight: 400;
   font-style: normal;
 }
 @font-face {
   font-family: PTSans;
-  src: url("/src/assets/fonts/PTSans-Bold.ttf") format("truetype");
+  src: url("/src/assets/fonts/Oswald-Bold.ttf") format("truetype");
   font-weight: 700;
   font-style: normal;
 }
 @font-face {
   font-family: PTSans;
-  src: url("/src/assets/fonts/PTSans-Italic.ttf") format("truetype");
-  font-weight: 400;
-  font-style: italic;
+  src: url("/src/assets/fonts/Oswald-Medium.ttf") format("truetype");
+  font-weight: 500;
+  font-style: normal;
 }
 @font-face {
   font-family: PTSans;
-  src: url("/src/assets/fonts/PTSans-BoldItalic.ttf") format("truetype");
-  font-weight: 700;
-  font-style: italic;
+  src: url("/src/assets/fonts/Oswald-SemiBold.ttf") format("truetype");
+  font-weight: 600;
+  font-style: normal;
+}
+@font-face {
+  font-family: PTSans;
+  src: url("/src/assets/fonts/Oswald-Light.ttf") format("truetype");
+  font-weight: 300;
+  font-style: normal;
+}
+@font-face {
+  font-family: PTSans;
+  src: url("/src/assets/fonts/Oswald-ExtraLight.ttf") format("truetype");
+  font-weight: 200;
+  font-style: normal;
 }
