--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -14,10 +14,8 @@ body {
   font-weight: 400;
   line-height: 1.3;
   letter-spacing: 0.2rem;
-  height: 100vh;
   width: 100%;
-  background-color: $color-white;
-  overflow: hidden;
+  background-color: var(--color-white);
 }
 
 *::-webkit-scrollbar {
@@ -51,7 +49,7 @@ body {
 
   z-index: 9998;
 
-  background-color: $black-color;
+  background-color: var(--black-color);
   opacity: 0.5;
 }
 .modal::after {
